[gd_scene load_steps=2 format=3 uid="uid://ctv4q8poxttqj"]

[ext_resource type="Script" uid="uid://kunem7kvdc3l" path="res://scripts/ui/in_game_option_menu.gd" id="1_h3wso"]

[node name="InGameOptionMenu" type="Control"]
process_mode = 3
z_index = 1
layout_mode = 3
anchors_preset = 0
offset_right = 1280.0
offset_bottom = 720.0
size_flags_horizontal = 4
size_flags_vertical = 4
script = ExtResource("1_h3wso")

[node name="BoxContainer" type="VBoxContainer" parent="."]
process_mode = 3
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -119.0
offset_top = -34.5
offset_right = 119.0
offset_bottom = 34.5
grow_horizontal = 2
grow_vertical = 2

[node name="EnableMobileControls" type="Button" parent="BoxContainer"]
process_mode = 3
layout_mode = 2
text = "Enable Mobile Controls"

[node name="Pause Menu" type="Button" parent="BoxContainer"]
process_mode = 3
layout_mode = 2
text = "Pause Menu"

[connection signal="pressed" from="BoxContainer/EnableMobileControls" to="." method="_on_enable_mobile_controls_pressed"]
[connection signal="pressed" from="BoxContainer/Pause Menu" to="." method="_on_pause_menu_pressed"]
